# snakefusion

./: .readthedocs.yml  COPYRIGHT.md  Cargo.toml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build-wheels.sh  release.yml  test.yml
docs/: api.rst  conf.py  index.rst  quickstart.rst
finalfusion/: __init__.py
finalfusion/tests/: conftest.py  embeddings.floret  test_embeddings.py
snakefusion/: __init__.py
snakefusion/tests/: conftest.py  floret-check.txt  test_analogy.py  test_embeddings.py  test_quantization.py  test_similarity.py  test_vocab.py
src/: config.rs  embeddings.rs  embeddings_wrap.rs  lib.rs  pq.rs  storage.rs  vocab.rs
