[metadata]
name = snakefusion
description = Read and use various word embedding formats
author = Daniël de Kok
author_email = me@danieldk.eu
license = MIT or Apache License, Version 2.0
long_description = file: README.md
long_description_content_type = text/markdown
classifiers=
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
packages = snakefusion
zip_safe = False
python_requires = >=3.6
setup_requires =
    setuptools-rust>=0.11.4
install_requires =
    numpy

[options.extras_require]
test =
    pytest
sdist =
    setuptools_rust >= 0.11.4

[bdist_wheel]
universal = false
